test/users/brodtkorb/coercionQuestion.good
coercionQuestion.chpl:2: error: unresolved call '<=(1.1, 1)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note: candidates are: <=(param a: enumerated, param b: enumerated)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(64), b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(64), b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(64), param b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: uint(64), b: uint(64))
$CHPL_HOME/modules/internal/CString.chpl:: note:                 <=(a: c_string, b: c_string)
$CHPL_HOME/modules/internal/CString.chpl:: note:                 <=(param a: c_string, param b: c_string)
$CHPL_HOME/modules/internal/String.chpl:: note:                 <=(param a: string, param b: string)
$CHPL_HOME/modules/internal/String.chpl:: note:                 <=(a: string, b: string)
$CHPL_HOME/modules/internal/ChapelTuple.chpl:: note:                 <=(a: _tuple, b: _tuple)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(8), b: int(8))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(16), b: int(16))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(32), b: int(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(64), b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(8), b: uint(8))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(16), b: uint(16))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(32), b: uint(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(64), b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: real(32), b: real(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: real(64), b: real(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: imag(32), b: imag(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: imag(64), b: imag(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a, param b)
